# TaskCap

./: .gitignore  LICENSE  README.md  RELEASE_NOTES.md  index.html  package-lock.json  package.json  vite.config.ts
scripts/: build.ps1  dev.ps1  env.ps1  process-panel-loading.py  tauri-build.ps1  tauri-check.ps1  tauri-dev.ps1  verify-startup-top.ps1  verify-startup.ps1  verify.ps1  vs-dev-env.ps1
src/: main.tsx  version.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: config.rs  deeplink.rs  lib.rs  main.rs  models.rs  panel.rs  parser.rs  reminder.rs  tray_util.rs
src-tauri/src/db/: mod.rs
src-tauri/src/store/: checks.rs  mod.rs
src-tauri/windows/: installer-hooks.nsh
src/lib/: appGlassStyle.ts  islandTaskMeta.ts  useUiTransparency.ts  windowDrag.ts  windowZOrder.ts
src/styles/: base.css  glass.css  island.css  panel.css
src/windows/island/: IslandWindow.tsx  islandLayout.ts  islandPreviewCarousel.ts  islandTransparency.ts  usePrefersDarkScheme.ts
src/windows/panel/: FocusCard.tsx  HistoryPanelView.tsx  PanelDateField.tsx  PanelWindow.tsx  QuickAddInput.tsx  SettingSection.tsx  SettingToggle.tsx  SettingsPanelView.tsx  TaskPanelView.tsx  TaskRow.tsx  panelTypes.ts  panelViews.ts  quickAddAssist.ts  useAppConfig.ts  usePanelSettings.ts
src/windows/quickadd/: QuickAddWindow.tsx
