[package]
name = "taskcap"
version = "0.1.1"
description = "TaskCap - floating task manager for Windows"
authors = ["TaskCap"]
license = "MIT"
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "taskcap_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.6.2", features = [] }

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
log = "0.4"
rusqlite = { version = "0.32", features = ["bundled"] }
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
tauri = { version = "2.11.2", features = ["tray-icon", "image-png"] }
tauri-plugin-log = "2"
tauri-plugin-single-instance = "2"
tauri-plugin-global-shortcut = "2"
tauri-plugin-notification = "2"
tauri-plugin-dialog = "2"
regex = "1"
url = "2"

[dev-dependencies]
tempfile = "3"
